# deeponets

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
deeponets/: models.py  modules.py
exps/: antiderivative.py  antiderivative.py.ipynb
tests/: test_models.py  test_modules.py
